# vl-sdk

./: .gitignore  README.md  image_similarity_search_results.csv  issue_search_results.csv  pyproject.toml  requirements.txt  setup.py  visual_similarity_search_results.csv
.github/: semantic.yml
.github/workflows/: ci.yml  python.yml
docs/: .gitignore  Makefile  README.md  api-reference.md  conf.py  getting-started.md  index.rst  installation.md  logging.md  requirements.txt  search-filtering.md  vql_usage_guide.md
examples/: issue_search_demo.py  logging_example.py  logging_output_demo.py  standard_logging_demo.py  vql_search_examples.py
sample/: dataset-explore-v2.ipynb  dataset-explore.ipynb
src/visual_layer_sdk/: __init__.py  client.py  dataset.py  exceptions.py  logger.py  searchable_dataset.py
tests/: test_client.py  test_integration.py
